update: change Wolfe Labs URL to point to the labs subdomain

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,7 +1,7 @@
 # App identity
 NEXT_PUBLIC_APP_NAME="ProductName"
 NEXT_PUBLIC_WOLFE_LABS_NAME="Wolfe Labs"
-NEXT_PUBLIC_WOLFE_LABS_URL="https://rwolfe.io"
+NEXT_PUBLIC_WOLFE_LABS_URL="https://labs.rwolfe.io"
 
 # Database
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/app"
